--- a/templates/nested/2-subnets/eks-cluster.yaml
+++ b/templates/nested/2-subnets/eks-cluster.yaml
@@ -229,6 +229,14 @@ Resources:
                 Resource: !Sub "arn:aws:secretsmanager:${AWS::Region}:${AWS::AccountId}:secret:${Environment}/${EKSClusterName}/*"
                 #Resource: "*"
                 Effect: Allow
+        - PolicyName: provision-secretsmanager-desc-policy
+          PolicyDocument:
+            Version: "2012-10-17"
+            Statement:
+              - Action:
+                  - secretsmanager:DescribeSecret
+                Resource: "*"
+                Effect: Allow
         - PolicyName: provision-iam-policy
           PolicyDocument:
             Version: "2012-10-17"
