--- a/templates/datahub-deployment-cleanup.yaml
+++ b/templates/datahub-deployment-cleanup.yaml
@@ -173,7 +173,7 @@ Resources:
                   - logs:DescribeLogGroups
                   - logs:DescribeLogStreams
                   - logs:PutRetentionPolicy
-                  #- logs:CreateLogGroup
+                  #- logs:DeleteLogGroup
                 Resource: !Sub "arn:aws:logs:${AWS::Region}:${AWS::AccountId}:log-group:*:*"
                 Effect: Allow
         - PolicyName: provision-ssm-policy
@@ -185,15 +185,6 @@ Resources:
                   - ssm:GetParameters
                   - ssm:GetParameter
                   - ssm:AddTagsToResource
-                #Resource: !Sub "arn:aws:ssm:${AWS::Region}:${AWS::AccountId}:parameter/${Environment}/${OldCFNStackName}/*"
-                Resource: "*"
-                Effect: Allow
-        - PolicyName: provision-kms-policy
-          PolicyDocument:
-            Version: "2012-10-17"
-            Statement:
-              - Action:
-                  - kms:GenerateRandom
                 Resource: "*"
                 Effect: Allow
         - PolicyName: provision-OpenID-policy
@@ -214,7 +205,6 @@ Resources:
                   - secretsmanager:CreateSecret
                   - secretsmanager:GetSecretValue
                   - secretsmanager:DescribeSecret
-                #Resource: !Sub "arn:aws:secretsmanager:${AWS::Region}:${AWS::AccountId}:secret:${Environment}/${OldCFNStackName}/*",
                 Resource: "*"
                 Effect: Allow
         - PolicyName: provision-iam-policy
@@ -526,6 +516,9 @@ Resources:
                 echo "deleting ingress security group from ${OldCFNStackName}..."
                 LB_SG=$(aws ec2 describe-security-groups --filters Name=tag:elbv2.k8s.aws/cluster,Values=${OldCFNStackName} --region ${AWS::Region} --query 'SecurityGroups[*].GroupId' --output text --no-paginate)
                 aws ec2 delete-security-group --group-id $LB_SG --region ${AWS::Region} --no-paginate
+                echo "deleting log group from .${OldCFNStackName}.."
+                aws logs delete-log-group --log-group-name "/aws/eks/${StackName}/cluster" --region ${AWS::Region} --no-paginate
+                aws logs delete-log-group --log-group-name "/aws/rds/cluster/${StackName}/error" --region ${AWS::Region} --no-paginate
               mode: "000750"
               owner: root
               group: root
