fix secrets IAM policy

--- a/templates/nested/2-subnets/eks-cluster.yaml
+++ b/templates/nested/2-subnets/eks-cluster.yaml
@@ -217,8 +217,7 @@ Resources:
               - Action:
                   - secretsmanager:CreateSecret
                   - secretsmanager:GetSecretValue
-                  - secretsmanager:DescribeSecret
-                Resource: !Sub "arn:aws:secretsmanager:${AWS::Region}:${AWS::AccountId}:secret:${Environment}/${EKSClusterName}/*"
+                Resource: !Sub "arn:aws:secretsmanager:${AWS::Region}:${AWS::AccountId}:secret:/${Environment}/${EKSClusterName}/*"
                 #Resource: "*"
                 Effect: Allow
         - PolicyName: provision-secretsmanager-desc-policy
