default to internet-facing, easy for test

--- a/templates/datahub-deployment-existing-vpc-2-subnets.yaml
+++ b/templates/datahub-deployment-existing-vpc-2-subnets.yaml
@@ -543,7 +543,7 @@ Parameters:
     KotsAdmNLBScheme:
       Description: Kots Admin Load Balancer Scheme
       Type: String
-      Default: "internal"
+      Default: "internet-facing"
       AllowedValues:
       - "internal"
       - "internet-facing"
